After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 624166 - [PATCH] src/core/util.c: Fix warning in case WITH_VERBOSE_MODE is not set
[PATCH] src/core/util.c: Fix warning in case WITH_VERBOSE_MODE is not set
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-07-12 13:05 UTC by Andreas Mueller
Modified: 2010-07-12 15:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (931 bytes, patch)
2010-07-12 13:05 UTC, Andreas Mueller
committed Details | Review

Description Andreas Mueller 2010-07-12 13:05:46 UTC
Created attachment 165735 [details] [review]
Patch

In case constant WITH_VERBOSE_MODE is not set, gcc warns that the variable meta_topic_real_valist is declared but never used. With -wError this causes build to stop.
Comment 1 Owen Taylor 2010-07-12 13:58:40 UTC
Comment on attachment 165735 [details] [review]
Patch

Looks fine. Let me know if you don't have GNOME commit access and I'll push it for you.
Comment 2 Andreas Mueller 2010-07-12 14:47:55 UTC
(In reply to comment #1)
> (From update of attachment 165735 [details] [review])
> Looks fine. Let me know if you don't have GNOME commit access and I'll push it
> for you.

I haven't got commit access - so please push for me. Thanks