src/core/util.c: Fix warning in case WITH_VERBOSE_MODE is not set

Signed-off-by: Andreas Mueller <schnitzeltony@gmx.de>

https://bugzilla.gnome.org/show_bug.cgi?id=624166